# sample_actix_with_redis

./: LICENSE  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: direct.rs  lib.rs  main.rs  my_error.rs  with_alt_r2d2.rs  with_bb8.rs  with_deadpool.rs  with_mobc.rs  with_old_r2d2.rs  with_r2d2.rs  with_r2d2_feature.rs
