[package]
name = "sample_actix_with_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"

redis = { version = "0.21.4", features = ["aio", "tokio-comp"] }
r2d2_redis = "0.14.0"
bb8-redis = "0.10.1"
deadpool-redis = "0.10.1"
mobc = "0.7"
mobc-redis = "0.7.0"


# tokio = { version = "1", features = ["rt"], optional = true }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }